--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     </section>
 
     <section class="main-content">
+      
+      <h3> This is all New Stuff</h3>
+      <p> This is all new stuff that i edited myself with what I already know from html including <strong>Strong Words</strong>
+      and <em>emphasised words</em> </p>
+      <img src="https://assetsnffrgf-a.akamaihd.net/assets/a/nwt/nwt_E/nwt_E_md.jpg" alt="New World Translation" Width="300">
+      
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
