--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       and <em>emphasised words</em> </p>
       <img src="https://assetsnffrgf-a.akamaihd.net/assets/a/nwt/nwt_E/nwt_E_md.jpg" alt="New World Translation" Width="200">
       
+      <h2> Stay Tuned for future updates</h2>
+      
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
