--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h3> This is all New Stuff</h3>
       <p> This is all new stuff that i edited myself with what I already know from html including <strong>Strong Words</strong>
       and <em>emphasised words</em> </p>
-      <img src="https://assetsnffrgf-a.akamaihd.net/assets/a/nwt/nwt_E/nwt_E_md.jpg" alt="New World Translation Bible" Width="300">
+      <img src="https://assetsnffrgf-a.akamaihd.net/assets/m/g16/201606/g16_201606.art/102016085_univ_lsr_lg.jpg" alt="Image from Jw.org" Width="300">
       
       <h2> Stay Tuned for future updates</h2>
       
