--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <style> h2 { color: red;}</style>
   </head>
   <body>
     <section class="page-header">
@@ -25,7 +26,7 @@
       and <em>emphasised words</em> </p>
       <img src="https://assetsnffrgf-a.akamaihd.net/assets/m/g16/201606/g16_201606.art/102016085_univ_lsr_lg.jpg" alt="Image from Jw.org" Width="300">
       
-      <h2> Stay Tuned for future updates</h2>
+      <h2 id="StayTuned">Stay Tuned for future updates</h2>
       
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
