--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    #StayTuned { <style> h2 { color: red;}</style> }
-    
+    <style>
+      #StayTuned { <style> h2 { color: red;}</style> }
+    </style>
   </head>
   <body>
     <section class="page-header">
