--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <style>
-      #StayTuned { <style> h2 { color: red;}</style> }
+      #StayTuned { <style> h2 { color: red;}</style> 
     </style>
   </head>
   <body>
