--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <img src="https://assetsnffrgf-a.akamaihd.net/assets/m/g16/201606/g16_201606.art/102016085_univ_lsr_lg.jpg" alt="Image from Jw.org" Width="300">
       
       <h2 id="StayTuned">Stay Tuned for future updates</h2>
-      <p id="backgroundColor"></p>
+      <p id="backgroundColor"> In this paragraph I'm testing background colors using rgb</p>
       
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
