--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <h3> This is all New Stuff</h3>
       <p> This is all new stuff that i edited myself with what I already know from html including <strong>Strong Words</strong>
       and <em>emphasised words</em> </p>
-      <img src="https://assetsnffrgf-a.akamaihd.net/assets/m/g16/201606/g16_201606.art/102016085_univ_lsr_lg.jpg" alt="Image from Jw.org" Width="300">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Ursus_arctos_-_Norway.jpg/200px-Ursus_arctos_-_Norway.jpg"
+      alt="A Bear Standing Up Straight" Width="300">
       
       <h2 id="StayTuned">Stay Tuned for future updates</h2>
       <p id="backgroundColor"> In this paragraph I'm testing background colors using rgb</p>
