--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       and <em>emphasised words</em> </p>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Ursus_arctos_-_Norway.jpg/200px-Ursus_arctos_-_Norway.jpg"
       alt="A Bear Standing Up Straight" Width="300">
+      <p>The image above was pulled from wikimedia.org and is a jpg file</p>
       
       <h2 id="StayTuned">Stay Tuned for future updates</h2>
       <p id="backgroundColor"> In this paragraph I'm testing background colors using rgb</p>
