--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       
       <h2 id="StayTuned">Stay Tuned for future updates</h2>
       <p id="backgroundColor"> In this paragraph I'm testing background colors using rgb</p>
+      <a target="_blank" href="http://www.jw.org"> You should always visit Jw.org</a> <p> to hear of any news</p>
       
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
