--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>WeazelsTesting1 by weazelteles85</title>
+    <style>
+      #backgroundColor {
+        background-color =(rgb 199, 199, 199);
+      }
+    </style>
+    
   </head>
   
   <body>
