--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>WeazelsTesting1 by weazelteles85</title>
     <style>
       #backgroundColor {
-        background-color: blue;
+        background-color: rgb(199, 199, 199);
       }
     </style>
     
