--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
   
   <body>
     
-      <h3> This is all New Stuff</h3>
+      <h1> Welcome to Weazel's Practice Web Site</h1>
+      <h2><em>What the crap is this place?</em></h2>
+      <p><strong>Good Question!</strong><br>This is a web site that Weazel is using to learn html5 and css3</p>
+      <h3><em>Oh... it looks awful, you're pretty bad</em></h2>
+      <p>Yes I know, but you have to start somewhere, but since you are here...</p>
+      <h2>Here is what I'm learning</h3> <br>
       <p> This is all new stuff that i edited myself with what I already know from html including <strong>Strong Words</strong>
       and <em>emphasised words</em> </p>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Ursus_arctos_-_Norway.jpg/200px-Ursus_arctos_-_Norway.jpg"
