--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h2 id="StayTuned">Stay Tuned for future updates</h2>
       <p id="backgroundColor"> In this paragraph I'm testing background colors using id reference and rgb</p>
       <p class="RedColor"> In this paragraph I'm using class reference to make everything in red</p>
-      <p>Please visit <a target="_blank" href="http://www.jw.org">Jw.org </a> for best news ever</p>
+      <p>Please visit <a target="_blank" href="http://www.jw.org">Jw.org </a> Its the best web site ever (no really it literally <strong>IS</strong> the best web site ever)</p>
       
     </section>
 
