--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <p><strong>Good Question!</strong><br>This is a web site that Weazel is using to learn html5 and css3</p>
       <h3><em>Oh... it looks awful, you're pretty bad</em></h2>
       <p>Yes I know, but you have to start somewhere, but since you are here...</p>
-      <h2>Here is what I'm learning</h3> <br>
+      <h2>Here is what I'm learning</h3>
+      <a #End-of-page>Jump to the end of the Page</a>
       <p> This is all new stuff that i edited myself with what I already know from html including <strong>Strong Words</strong>
       and <em>emphasised words</em> </p>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Ursus_arctos_-_Norway.jpg/200px-Ursus_arctos_-_Norway.jpg"
@@ -31,8 +32,7 @@
       <p class="RedColor"> In this paragraph I'm using class reference to make everything in red</p>
       <p>Please visit <a target="_blank" href="http://www.jw.org">Jw.org </a> Its the best web site ever (no really it literally <strong>IS</strong> the best web site ever)</p>
       
-    </section>
 
-  
+  <p id="End-of-page"> This is the end of the page</p>
   </body>
 </html>
