--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <h3><em>Oh... it looks awful, you're pretty bad</em></h2>
       <p>Yes I know, but you have to start somewhere, but since you are here...</p>
       <h2>Here is what I'm learning</h3>
-      <a #End-of-page>Jump to the end of the Page</a>
+      
+      <a href="#endOfPage">Jump to the end of the Page</a>
       <p> This is all new stuff that i edited myself with what I already know from html including <strong>Strong Words</strong>
       and <em>emphasised words</em> </p>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Ursus_arctos_-_Norway.jpg/200px-Ursus_arctos_-_Norway.jpg"
@@ -33,6 +34,6 @@
       <p>Please visit <a target="_blank" href="http://www.jw.org">Jw.org </a> Its the best web site ever (no really it literally <strong>IS</strong> the best web site ever)</p>
       
 
-  <p id="End-of-page"> This is the end of the page</p>
+  <p id="endOfPage"> This is the end of the page</p>
   </body>
 </html>
