--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
       <p id="backgroundColor"> In this paragraph I'm testing background colors using id reference and rgb</p>
       <p class="RedColor"> In this paragraph I'm using class reference to make everything in red</p>
       <p>Please visit <a target="_blank" href="http://www.jw.org">Jw.org </a> Its the best web site ever (no really it literally <strong>IS</strong> the best web site ever)</p>
+      <p>Here are the reasons why</p>
+      <ul> 
+        <li>Its this</li>
+        <li>This</li>
+        <li>And this</li>
+      </ul>
+      <p>Yeah i'm not really giving reasons, i'm just learning about ordered and unordered lists, why? 3 reasons</p>
+      <ol>
+        <li>Reason one</li>
+        <style>color: blue; <li>Reason two</li></style>
+        <li>Reason three</li>
+      </ol>
       
 
   <p id="endOfPage"> This is the end of the page</p>
