--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <p>Yeah i'm not really giving reasons, i'm just learning about ordered and unordered lists, why? 3 reasons</p>
       <ol>
         <li>Reason one</li>
-        <style>color: blue; <li>Reason two</li></style>
+        <li style color:Blue>Reason two</li></style>
         <li>Reason three</li>
       </ol>
       
