--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     
       <h1> Welcome to Weazel's Practice Web Site</h1>
-      <h2><em>What the crap is this place?</em></h2>
+      <h2><em>What the heck is this place?</em></h2>
       <p><strong>Good Question!</strong><br>This is a web site that Weazel is using to learn html5 and css3</p>
       <h3><em>Oh... it looks awful, you're pretty bad</em></h2>
       <p>Yes I know, but you have to start somewhere, but since you are here...</p>
@@ -44,6 +44,42 @@
         <li>Reason two</li>
         <li>Reason three</li>
       </ol>
+      <h4>Now lets do a table of something... I'll list people I know and rank their combat starts</h4>
+      <table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Strength</th>
+            <th>Health</th>
+            <th>Agility</th>
+            <th>Mental</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Claudio</td>
+            <td>6</td>
+            <td>14</td>
+            <td>7</td>
+            <td>7</td>
+          </tr>
+          <tr>
+            <td>Brian</td>
+            <td>10</td>
+            <td>16</td>
+            <td>4</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <td>Leandro</td>
+            <td>4</td>
+            <td>13</td>
+            <td>8</td>
+            <td>10</td>
+          </tr>
+        </tbody>
+      </table>
+  
       
 
   <p id="endOfPage"> This is the end of the page</p>
