--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <li>Reason two</li>
         <li>Reason three</li>
       </ol>
-      <h4>Now lets do a table of something... I'll list people I know and rank their combat starts</h4>
+      <h4>Now lets do a table of something... I know, I'll list people I know and then rank their combat stats</h4>
       <table>
         <thead>
           <tr>
