--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   
   <body>
+    <!-- This is a Comment the begining of the WebPage -->
     
       <h1> Welcome to Weazel's Practice Web Site</h1>
       <h2><em>What the heck is this place?</em></h2>
