--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <th>Health</th>
             <th>Agility</th>
             <th>Mental</th>
+            <th>Image</th>
           </tr>
         </thead>
         <tbody>
@@ -63,13 +64,7 @@
             <td>14</td>
             <td>7</td>
             <td>7</td>
-          </tr>
-          <tr>
-            <td>Brian</td>
-            <td>10</td>
-            <td>16</td>
-            <td>4</td>
-            <td>3</td>
+            <td><img src="https://s-media-cache-ak0.pinimg.com/564x/14/f3/6b/14f36bde74f5e382fbeae62e9b58a87e.jpg" width="200"></td>
           </tr>
           <tr>
             <td>Leandro</td>
@@ -77,6 +72,15 @@
             <td>13</td>
             <td>8</td>
             <td>10</td>
+            <td><img src="http://www.wallpaperup.com/uploads/wallpapers/2013/03/24/60839/big_thumb_eee8709d9a46e942fab8d8afe0c0a65d.jpg" width="200"></td>
+          </tr>
+          <tr>
+            <td>Brian</td>
+            <td>2</td>
+            <td>8</td>
+            <td>4</td>
+            <td>1</td>
+            <td><img src="http://wallpapercave.com/wp/N1OF7RI.png" width="200"></td>
           </tr>
         </tbody>
       </table>
