--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <td>8</td>
             <td>4</td>
             <td>1</td>
-            <td><img src="http://wallpapercave.com/wp/N1OF7RI.png" width="150"></td>
+            <td><img src="http://sf.co.ua/13/03/wallpaper-2643863.jpg" width="150"></td>
           </tr>
         </tbody>
       </table>
