--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         background-color: rgb(199, 199, 199);
       }
       .RedColor { color: red;}
+      p {font-family:"comic sans";}
+      h {font-family:"Goudy Old Style";}
     </style>
     
   </head>
