--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         background-color: rgb(199, 199, 199);
       }
       .RedColor { color: red;}
-      p {font-family:"comic sans";}
-      h {font-family:"Goudy Old Style";}
+      p {font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;}
+      h1, h2, h3 {font-family: "Arial Black", "Arial Bold", Gadget, sans-serif;}
     </style>
     
   </head>
