--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       }
       .RedColor { color: red;}
       p {font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;}
-      p {font-size:"42px";}
+      p {font-size: 24px}
       h1, h2, h3 {font-family: "Arial Black", "Arial Bold", Gadget, sans-serif;}
     </style>
     
