--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       .RedColor { color: red;}
       p {font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;}
       p {font-size: 24px}
-      h1, h2, h3 {font-family: "Comic Sans", "Arial Bold", Gadget, sans-serif;}
+      h1, h2, h3 {font-family: Georgia, Times, "Times New Roman", serif;}
     </style>
     
   </head>
