--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         background-color: rgb(199, 199, 199);
       }
       .RedColor { color: red;}
+      .Bold {font-weight: bold;}
       p {font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;}
       p {font-size: 24px}
       h1, h2, h3 {font-family: Georgia, Times, "Times New Roman", serif;}
@@ -18,7 +19,7 @@
   <body>
     <!-- This is a Comment the begining of the WebPage -->
     
-      <h1> Welcome to Weazel's Practice Web Site</h1>
+      <h1 class="Bold"> Welcome to Weazel's Practice Web Site</h1>
       <h2><em>What the heck is this place?</em></h2>
       <p><strong>Good Question!</strong><br>This is a web site that Weazel is using to learn html5 and css3</p>
       <h3><em>Oh... it looks awful, you're pretty bad</em></h2>
