--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1 class="Bold"> Welcome to Weazel's Practice Web Site</h1>
       <h2><em>What the heck is this place?</em></h2>
       <p><strong>Good Question!</strong><br>This is a web site that Weazel is using to learn html5 and css3</p>
-      <h3><em>Oh... it looks awful, you're pretty bad</em></h2>
+      <h3>Oh... it looks awful, you're pretty bad</h2>
       <p>Yes I know, but you have to start somewhere, but since you are here...</p>
       <h2>Here is what I'm learning</h3>
       
