--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
             <td>4</td>
             <td><img src="http://sf.co.ua/13/03/wallpaper-2643863.jpg" width="150"></td>
           </tr>
+          <tr>
+            <td>Leilane</td>
+            <td>4</td>
+            <td>10</td>
+            <td>10</td>
+            <td>8</td>
+            <td><img src="https://s-media-cache-ak0.pinimg.com/736x/29/dd/2a/29dd2a38df9951d51880418dff897446.jpg" width="150"></td>
+          </tr>
         </tbody>
       </table>
   
