--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
             <td>8</td>
             <td><img src="https://s-media-cache-ak0.pinimg.com/736x/29/dd/2a/29dd2a38df9951d51880418dff897446.jpg" width="150"></td>
           </tr>
+          <tr>
+            <td>Kevin</td>
+            <td>6</td>
+            <td>15</td>
+            <td>8</td>
+            <td>8</td>
+            <td><img src=https://s-media-cache-ak0.pinimg.com/564x/36/d1/cf/36d1cfe534a0696ed72d5136879ff07b.jpg width="150"></td>
+          </tr>
         </tbody>
       </table>
   
