--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
       p {font-size: 24px}
       h1, h2, h3 {font-family: Georgia, Times, "Times New Roman", serif;}
       .CombatStatsTable {
-        table {
-          border-collapse: separate;
-          border-spacing:100px 500px;
-        }
+        background-color: rgb(200, 200, 200);
       }
     </style>
     
