--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       h1, h2, h3 {font-family: Georgia, Times, "Times New Roman", serif;}
       .CombatStatsTable {
         background-color: rgb(200, 200, 200);
+        width:50%;
       }
     </style>
     
