--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         background-color: rgb(200, 200, 200);
         width:50%;
       }
+      #FriendStats {
+        border-collapse: separate;
+        empty-cells: hidden;
+      }
     </style>
     
   </head>
@@ -55,7 +59,7 @@
       </ol>
       <h2>Now lets do a table of something... I know, I'll list people I know and then rank their combat stats</h2>
       <div class="CombatStatsTable">
-      <table>
+      <table id="FriendStats">
         <thead>
           <tr>
             <th>Name</th>
