--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       }
       #FriendStats {
         border-collapse: separate;
-        empty-cells: hidden;
+        border-spacing: 30px 60px;
       }
     </style>
     
