--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       }
       #FriendStats {
         border-collapse: separate;
-        border-spacing: 30px 60px;
+        border-spacing: 20% 20%;
       }
     </style>
     
