--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       }
       #FriendStats {
         border-collapse: separate;
-        border-spacing: 50% 20%;
+        border-spacing: 50 px 10px;
       }
     </style>
     
