--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       #FriendStats {
         border-collapse: separate;
         border-spacing: 80px 30px;
+        text-align: center;
       }
     </style>
     
