--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         border-collapse: separate;
         border-spacing: 80px 30px;
         text-align: center;
+        border: 1px solid black;
       }
     </style>
     
