--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
       h1, h2, h3 {font-family: Georgia, Times, "Times New Roman", serif;}
       .CombatStatsTable {
         background-color: rgb(200, 200, 200);
-        width:50%;
+        width:80px;
       }
       
       #FriendStats {
         border-collapse: separate;
         border-spacing: 80px 30px;
         text-align: center;
+        border: 2px solid black;
          }
       
     </style>
