--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
       h1, h2, h3 {font-family: Georgia, Times, "Times New Roman", serif;}
       .CombatStatsTable {
         background-color: rgb(200, 200, 200);
-        width:80px;
       }
       
       #FriendStats {
-        border-collapse: separate;
+        border-collapse: collapse;
         border-spacing: 80px 30px;
         text-align: center;
         border: 2px solid black;
