--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       }
       
       #FriendStats {
-        border-collapse: collapse;
+        border-collapse: separate;
         border-spacing: 80px 30px;
         text-align: center;
         border: 2px solid black;
