--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         border-spacing: 80px 30px;
         text-align: center;
         border: 2px solid black;
+        empty-cells: visible;
          }
       
     </style>
