--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         background-color: rgb(200, 200, 200);
         width:60%;
         border: 2px solid black;
-        
+        border-spacing: 80px 20px;
       }
       
     </style>
