--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
       p {font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;}
       p {font-size: 24px}
       h1, h2, h3 {font-family: Georgia, Times, "Times New Roman", serif;}
+      table {
+        border-spacing: 80px 20px;
+      }
       .CombatStatsTable {
         background-color: rgb(200, 200, 200);
         width:60%;
         border: 2px solid black;
-        border-spacing: 80px 20px;
       }
       
     </style>
