--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       p {font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;}
       p {font-size: 24px}
       h1, h2, h3 {font-family: Georgia, Times, "Times New Roman", serif;}
+      h1 {
+        text-align: center;
+        text-shadow: -2px 2px 6px;
+      }
       table {
         border-spacing: 80px 20px;
       }
