--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       }
       table {
         border-spacing: 80px 20px;
+        border: 1px solid black;
       }
       .CombatStatsTable {
         background-color: rgb(200, 200, 200);
