--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         text-align: center;
         text-shadow: -1px 1px 2px;
       }
-      table {
+      table, td {
         border-spacing: 80px 20px;
         border: 1px solid black;
       }
