--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         text-align: center;
         text-shadow: -1px 1px 2px;
       }
-      table, td {
+      table, th {
         border-spacing: 80px 20px;
         border: 1px solid black;
+        text-align: center;
       }
       .CombatStatsTable {
         background-color: rgb(200, 200, 200);
