--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         text-align: center;
         text-shadow: -1px 1px 2px;
       }
-      table, th {
+      table, th, td {
         border-spacing: 80px 20px;
+        border-collapse: collapse;
         border: 1px solid black;
         text-align: center;
       }
