--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         border: 1px solid black;
         text-align: center;
       }
+      table {
+        width: 100%;
+      }
       
       <!--.CombatStatsTable --> {
         background-color: rgb(200, 200, 200);
