--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         border-spacing: 80px 20px;
         border: 1px solid black;
         text-align: center;
+        background-color: rgb(210, 210, 210);
       }
       table {
-        width: 100%;
+        width: 50%;
       }
       
       <!--.CombatStatsTable --> {
