--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       table {
         width: 50%;
         background-color: rgb(210, 210, 210);
+        width: center;
       }
       
       <!--.CombatStatsTable --> {
