--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       #backgroundColor {
         background-color: rgb(199, 199, 199);
       }
+      body {
+        text-align: center;
+      }
       .RedColor { color: red;}
       .Bold {font-weight: bold;}
       p {font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;}
