--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       }
       .RedColor { color: red;}
       .Bold {font-weight: bold;}
+      .Centered{text-align: center;}
       p {font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;}
       p {font-size: 24px}
       h1, h2, h3 {font-family: Georgia, Times, "Times New Roman", serif;}
@@ -71,7 +72,7 @@
         <li>Reason two</li>
         <li>Reason three</li>
       </ol>
-      <h2>Now lets do a table of something... I know, I'll list people I know and then rank their combat stats</h2>
+      <h2 class="Centered">Now lets do a table of something... I know, I'll list people I know and then rank their combat stats</h2>
       <div id="CombatStatsTable">
       <table>
         <thead>
