--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
         margin: auto;
       }
       #intro {
+        width:50%;
         margin: auto;
         border: 2px groove black;
         background-color: rgb(252, 208, 95);
+        padding:15px;
       }
       
     </style>
