--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         margin: auto;
         border: 2px groove black;
         background-color: rgb(252, 208, 94);
-        padding:15px;
+        text-align: center;
       }
       
     </style>
