--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       }
       #BearDescription {
         position: absolute;
-        left: 200px;
+        top:300px;
+        left: 300px;
       }
       
     </style>
