--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         text-align: center;
       }
       #BearDescription {
-        position: absolute;
+        position: relative;
         top:600px;
         left: 350px;
       }
