--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       }
       #BearDescription {
         position: relative;
-        top:-300px;
+        top:-400px;
         left: 350px;
       }
       
@@ -64,8 +64,9 @@
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Ursus_arctos_-_Norway.jpg/200px-Ursus_arctos_-_Norway.jpg"
       alt="A Bear Standing Up Straight" Width="300">
       <div id="BearDescription">
-      <p>The image to my left was pulled from wikimedia.org and is a jpg file</p>
-      <p>In this paragraph I used CSS to make sure this writing appears to the right of the bear picture instead of immediatly below it</p>
+      <p>The image to my left was pulled from wikimedia.org and is a jpg file
+      In this paragraph I used CSS to make sure this writing appears to the right of the bear picture instead of immediatly below it. The method i used is "relative" which means it will be placed where it usually goes plus the top and left value. This can especially make the placement of this text different depending on what screen you are viewing this web site. For instance on your phone, this may seem way off center with the piture.      
+      </p>
       </div>
       <h2 id="StayTuned">Stay Tuned for future updates</h2>
       <p id="backgroundColor"> In this paragraph I'm testing background colors using id reference and rgb</p>
