--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
       alt="A Bear Standing Up Straight" Width="300">
       <div id="BearDescription">
       <p>The image to my left was pulled from wikimedia.org and is a jpg file<br>
-      In this paragraph I used CSS to make sure this writing appears to the right of the bear picture instead of immediatly below it. 
-      The method i used is "relative" which means it will be placed where it usually goes plus the top and left value. 
-      This can especially make the placement of this text different depending on what screen you are viewing this web site. 
+      In this paragraph I used CSS to make sure this writing appears to the right of the bear picture instead of immediatly below it.<br> 
+      The method i used is "relative" which means it will be placed where it usually goes plus the top and left value.<br> 
+      This can especially make the placement of this text different depending on what screen you are viewing this web site.<br> 
       For instance on your phone, this may seem way off center with the piture.      
       </p>
       </div>
