--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         text-align: center;
       }
       #BearDescription {
+        background-color: rgb(280,280,280);
+        border: 2px dashed rgb(280,280,280);
         position: relative;
         top:-400px;
         left: 350px;
