--- a/index.html
+++ b/index.html
@@ -36,12 +36,11 @@
         text-align: center;
       }
       #BearDescription {
-        background-color: rgb(280,280,280);
+        background-color: blue;
         border: 2px dashed rgb(280,280,280);
         position: relative;
         top:-400px;
         left: 350px;
-        right: 900px;
       }
       
     </style>
