--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
         text-align: center;
       }
       #BearDescription {
-        background-color: red;
+        background-color: blue;
         position: relative;
         top:-400px;
-        left: 350px;
         right: 800px;
       }
       
