--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         background-color: red;
         position: relative;
         top:-400px;
+        right: auto;
       }
       
     </style>
