--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         text-align: center;
       }
       #BearDescription {
-        background-color: red;
+        background-color: blue;
         position: relative;
         top:-400px;
         right: auto;
