--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
         text-align: center;
       }
       #BearDescription {
-        background-color: blue;
+        background-color: red;
         position: relative;
         top:-400px;
+        left: 350px;
         right: auto;
       }
       
