--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         text-align: center;
       }
       #BearDescription {
-        background-color: red;
+        background-color: blue;
         position: relative;
         top:-400px;
         left: 350px;
-        right: auto;
+        margin-right:800px;
       }
       
     </style>
