--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
         text-align: center;
       }
       #BearDescription {
-        background-color: blue;
+        background-color: red;
         position: relative;
         top:-400px;
-        left: 350px;
-        margin-right:850px;
+        left: 325px;
+        margin-right:1000px;
+        padding: 10px;
       }
       
     </style>
