--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         text-align: center;
       }
       #BearDescription {
-        background-color: rgb(280,280,280);
+        background-color: red;
         position: relative;
         top:-400px;
         left: 325px;
-        margin-right:80%;
+        margin-right:100%;
         padding: 10px;
       }
       
