--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         top:-400px;
         left: 325px;
         padding: 10px;
+        margin-right: 1000;
       }
       
       #restOfBody {
