--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       }
       #BearDescription {
         background-color: rgb(220, 220, 220);
+        border: 2px dashed black;
         position: relative;
         top:-400px;
         left: 325px;
