--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         top:-400px;
         left: 325px;
         padding: 10px;
-        margin-right: 20px;
+        border-right: 30px;
       }
       
       #restOfBody {
