--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
       }
       #BearDescription {
         background-color: rgb(220, 220, 220);
-        border: 2px dashed Orange;
+        border: 2px dashed Black;
         position: relative;
         top:-400px;
         left: 325px;
         padding: 10px;
-        border-right: 30px;
+        border-right: 50px;
       }
       
       #restOfBody {
