--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         position: relative;
         top:-400px;
         left: 325px;
+        width: 75%;
         padding: 10px;
-        border-right: 50px;
       }
       
       #restOfBody {
