--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
       For instance on your phone, this may seem way off center with the piture.      
       </p>
       </div>
+      <div id="JWLogo">
+        <img src="http://myfonts-wtf.s3.amazonaws.com/59/59e5c686186185836ad17a5a3f3cc1f1.160123.png" alt="Jw.org Logo" width="150">
+        <p id="JWLogoDescription">Click here to visit anytime</p>
+      </div>
       <div id="restOfBody">
       <h2 id="StayTuned">Stay Tuned for future updates</h2>
       <p id="backgroundColor"> In this paragraph I'm testing background colors using id reference and rgb</p>
