--- a/index.html
+++ b/index.html
@@ -44,10 +44,18 @@
         width: 75%;
         padding: 15px;
       }
-      
       #restOfBody {
         position: relative;
         top:-200px
+      }
+      #JWLogo {
+        position:fixed;
+        top:0px;
+        right:0%;
+      }
+      #JWLogoDescription  {
+        margin-top:1px;
+        font-size:12px;
       }
       
     </style>
