--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
       #JWLogoDescription  {
         margin-top:1px;
         font-size:12px;
+        font-weight: bold;
+        background-color: rgb(63, 3, 9);
+        color: white;
       }
       
     </style>
@@ -89,7 +92,7 @@
       </p>
       </div>
       <div id="JWLogo">
-        <img src="http://myfonts-wtf.s3.amazonaws.com/59/59e5c686186185836ad17a5a3f3cc1f1.160123.png" alt="Jw.org Logo" width="150">
+        <img src="http://myfonts-wtf.s3.amazonaws.com/59/59e5c686186185836ad17a5a3f3cc1f1.160123.png" alt="Jw.org Logo" width="125">
         <p id="JWLogoDescription">Click here to visit anytime</p>
       </div>
       <div id="restOfBody">
