--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         font-weight: bold;
         background-color: rgb(70, 104, 240);
         color: white;
+        z-index: 1;
       }
       
     </style>
