--- a/index.html
+++ b/index.html
@@ -94,8 +94,10 @@
       </p>
       </div>
       <div id="JWLogo">
+        <a href="https://www.jw.org">
         <img src="http://myfonts-wtf.s3.amazonaws.com/59/59e5c686186185836ad17a5a3f3cc1f1.160123.png" alt="Jw.org Logo" width="125">
         <p id="JWLogoDescription">Click here to visit anytime</p>
+        </a>
       </div>
       <div id="restOfBody">
       <h2 id="StayTuned">Stay Tuned for future updates</h2>
