--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
       </p>
       </div>
       <div id="JWLogo">
-        <a href="https://www.jw.org">
+        <a target="_blank" href="https://www.jw.org">
         <img src="http://myfonts-wtf.s3.amazonaws.com/59/59e5c686186185836ad17a5a3f3cc1f1.160123.png" alt="Jw.org Logo" width="125">
-        <p id="JWLogoDescription">Click here to visit anytime</p>
+        <p id="JWLogoDescription">Visit Here Anytime</p>
         </a>
       </div>
       <div id="restOfBody">
