--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
         position:fixed;
         top:0px;
         right:0%;
+        z-index: 2;
       }
       #JWLogoDescription  {
         margin-top:1px;
         font-size:12px;
+        text-align: center;
         font-weight: bold;
         background-color: rgb(70, 104, 240);
         color: white;
-        z-index: 2;
       }
       
     </style>
