--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>WeazelsTesting1 by weazelteles85</title>
     <style>
+    body {
+      background-color: rgb(255, 240, 166);
+    }
+    
       #backgroundColor {
         background-color: rgb(199, 199, 199);
         z-index:1;
