--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>WeazelsTesting1 by weazelteles85</title>
     <style>
     body {
-      background-color: rgb(255, 253, 212);
+      background-color: rgb(250, 245, 147);
     }
     
       #backgroundColor {
@@ -61,11 +61,12 @@
       }
       #JWLogoDescription  {
         margin-top:1px;
-        font-size:13px;
+        font-size:14px;
         text-align: center;
         font-weight: bold;
         background-color: rgb(70, 104, 240);
         color: white;
+        text-decoration: none;
       }
       
     </style>
