--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
         background-color: rgb(252, 208, 94);
         text-align: center;
       }
+      #Bear-Pic {
+         Width="300"
+         float:left;
+      }
+      
       #BearDescription {
         background-color: rgb(220, 220, 220);
         border: 3px dashed rgb(200, 200, 200);
@@ -89,8 +94,8 @@
       <p> This is all new stuff that i edited myself with what I already know from html including <strong>Strong Words</strong>
       and <em>emphasised words</em> </p>
       
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Ursus_arctos_-_Norway.jpg/200px-Ursus_arctos_-_Norway.jpg"
-      alt="A Bear Standing Up Straight" Width="300">
+      <img id="Bear-Pic" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Ursus_arctos_-_Norway.jpg/200px-Ursus_arctos_-_Norway.jpg"
+      alt="A Bear Standing Up Straight">
       <div id="BearDescription">
       <p>The image to my left was pulled from wikimedia.org and is a jpg file<br>
       In this paragraph I used CSS to make sure this writing appears to the right of the bear picture instead of immediatly below it.<br> 
