--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         text-align: center;
       }
       #Bear-Pic {
-         Width="400"
+         Width="600"
          float:left;
+         margin-right:6px;
       }
       #BearDescription {
         background-color: rgb(220, 220, 220);
         border: 3px dashed rgb(200, 200, 200);
-        width: 75%;
       }
       
       #JWLogo {
