--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
       }
       #Bear-Pic {
          Width="600"
-         float:left;
+         float:right;
          margin-right:6px;
+         padding:4px;
       }
       #BearDescription {
         background-color: rgb(220, 220, 220);
