--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
         text-align: center;
       }
       #Bear-Pic {
-         Width="600"
-         float:right;
+         float:left;
          margin-right:6px;
          padding:4px;
       }
