--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         text-align: center;
       }
       #Bear-Pic {
+        width:20%;
          float:left;
          margin-right:6px;
          padding:4px;
