--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         text-align: center;
       }
       #Bear-Pic {
-        width:20%;
+        width:300px;
          float:left;
          margin-right:6px;
          padding:4px;
