--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       #BearDescription {
         background-color: rgb(220, 220, 220);
         border: 3px dashed rgb(200, 200, 200);
+        width:75%;
       }
       
       #JWLogo {
