--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         text-align: center;
       }
       #Bear-Pic {
-        width:300px;
+        width:200px;
          float:left;
          margin-right:6px;
          padding:4px;
@@ -51,6 +51,11 @@
         border: 3px dashed rgb(200, 200, 200);
         width:75%;
       }
+      #restOfBody {
+        position:relative;
+        top:100px;
+      }
+      
       
       #JWLogo {
         position:fixed;
