--- a/index.html
+++ b/index.html
@@ -47,13 +47,15 @@
          padding:4px;
       }
       #BearDescription {
+        position:relative;
+        top:50px;
         background-color: rgb(220, 220, 220);
         border: 3px dashed rgb(200, 200, 200);
         width:75%;
       }
       #restOfBody {
         position:relative;
-        top:100px;
+        top:150px;
       }
       
       
