--- a/index.html
+++ b/index.html
@@ -97,12 +97,14 @@
       
         <img id="Bear-Pic" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Ursus_arctos_-_Norway.jpg/200px-Ursus_arctos_-_Norway.jpg"
       alt="A Bear Standing Up Straight">
-        <p id="BearDescription"> The image to my left was pulled from wikimedia.org and is a jpg file<br>
+      <div id="BearDescription">
+        <p> The image to my left was pulled from wikimedia.org and is a jpg file<br>
       In this paragraph I used CSS to make sure this writing appears to the right of the bear picture instead of immediatly below it.<br> 
       The method i used is "relative" which means it will be placed where it usually goes plus the top and left value.<br> 
       This can especially make the placement of this text different depending on what screen you are viewing this web site.<br> 
       For instance on your phone, this may seem way off center with the piture.      
       </p>
+      </div>
       <div id="JWLogo">
         <a target="_blank" href="https://www.jw.org">
         <img src="http://myfonts-wtf.s3.amazonaws.com/59/59e5c686186185836ad17a5a3f3cc1f1.160123.png" alt="Jw.org Logo" width="125">
