--- a/index.html
+++ b/index.html
@@ -89,10 +89,12 @@
       <p> This is all new stuff that i edited myself with what I already know from html including <strong>Strong Words</strong>
       and <em>emphasised words</em> </p>
       
-        <img id="Bear-Pic" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Ursus_arctos_-_Norway.jpg/200px-Ursus_arctos_-_Norway.jpg"
-      alt="A Bear Standing Up Straight">
+        
       <div id="BearDescription">
-        <p> The image to my left was pulled from wikimedia.org and is a jpg file<br>
+        <p>
+          <img id="Bear-Pic" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Ursus_arctos_-_Norway.jpg/200px-Ursus_arctos_-_Norway.jpg"
+      alt="A Bear Standing Up Straight">
+           The image to my left was pulled from wikimedia.org and is a jpg file<br>
       In this paragraph I used CSS to make sure this writing appears to the right of the bear picture instead of immediatly below it.<br> 
       The method i used is "relative" which means it will be placed where it usually goes plus the top and left value.<br> 
       This can especially make the placement of this text different depending on what screen you are viewing this web site.<br> 
