--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
          padding:4px;
       }
       #BearDescription {
+        height: 400px;
+        border: 3px dashed black;
       }
       #restOfBody {
       }
