--- a/index.html
+++ b/index.html
@@ -41,14 +41,16 @@
         text-align: center;
       }
       #Bear-Pic {
-        width:200px;
+        height:400px;
          float:left;
          margin-right:8px;
+         margin-left:8px;
          padding:4px;
       }
       #BearDescription {
-        height: 400px;
-        border: 3px dashed black;
+        height: 400;
+        border: 3px dashed gray;
+        background-color: rgb(220,220,220);
       }
       #restOfBody {
       }
