--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       h1, h2, h3 {font-family: Georgia, Times, "Times New Roman", serif;}
       h1 {
         text-align: center;
-        text-shadow: -1px 1px 2px;
+        text-shadow: -4px 4px 2px;
       }
       table, th, td {
         border-collapse: collapse;
@@ -39,6 +39,7 @@
         border: 2px groove black;
         background-color: rgb(252, 208, 94);
         text-align: center;
+        box-shadow: -4px 4px 2px;
       }
       #Bear-Pic {
          float:left;
