--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       p {font-size: 24px}
       h1, h2, h3 {font-family: Georgia, Times, "Times New Roman", serif;}
       h1 {
-        font-size: 20px;
+        font-size: 25%;
         color:rgb(222, 173, 24);
         text-align: center;
         text-shadow: -4px 4px 2px;
