--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       h1 {
         color:rgb(222, 173, 24);
         text-align: center;
-        text-shadow: -4px 4px 2px;
+        text-shadow: -6px 6px 3px black;
       }
       table, th, td {
         border-collapse: collapse;
@@ -40,7 +40,7 @@
         border: 2px groove black;
         background-color: rgb(252, 208, 94);
         text-align: center;
-        box-shadow: -4px 4px 2px;
+        box-shadow: -6px 6px 3px;
       }
       #Bear-Pic {
          float:left;
