--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
          padding:4px;
       }
       #BearDescription {
-        height:400px;
+        height:20%;
         border: 3px dashed gray;
         background-color: rgb(220,220,220);
       }
@@ -107,7 +107,7 @@
       In this paragraph I used CSS to make sure this writing appears to the right of the bear picture instead of immediatly below it.<br> 
       </p><div id="Strikethrough"><p>The method i used is "relative" which means it will be placed where it usually goes plus the top and left value.<br> 
       This can especially make the placement of this text different depending on what screen you are viewing this web site.<br> 
-      For instance on your phone, this may seem way off center with the piture. </div></p><br>
+      For instance on your phone, this may seem way off center with the piture. </div></p>
       <p>The Method I actually used was on the image id, I added a CSS rule that would float the image to the left of whatever came next.<br>
       I included the image in the same 'p' as this paragraph.
       </p>
