--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
          padding:4px;
       }
       #BearDescription {
-        height:20%;
+        height:30%;
         border: 3px dashed gray;
         background-color: rgb(220,220,220);
       }
       #restOfBody {
+        clear: both;
       }
       
       #Strikethrough {
