--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
          padding:4px;
       }
       #BearDescription {
-        border: 3px dashed gray;
+        border: 3px dashed black;
         background-color: rgb(220,220,220);
       }
       #restOfBody {
