--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
          padding:4px;
       }
       #BearDescription {
+        height: auto;
         border: 3px dashed white;
         background-color: rgb(220,220,220);
       }
