--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       }
       #BearDescription {
         height: auto;
-        border: 3px dashed white;
+        border: 3px dashed gray;
         background-color: rgb(220,220,220);
       }
       #restOfBody {
