--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
          padding:4px;
       }
       #BearDescription {
-        height: auto;
+        height: 400px;
         border: 3px dashed gray;
         background-color: rgb(220,220,220);
+        border-left:2px;
       }
       #restOfBody {
         clear: both;
