--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         height: 350px;
         border: 3px dashed gray;
         background-color: rgb(220,220,220);
-        border-left:-100px;
+        padding-left: 2px;
       }
       #restOfBody {
         clear: both;
@@ -101,11 +101,10 @@
       and <em>emphasised words</em> </p>
       
         
-      <div id="BearDescription">
-        <p>
-          <img id="Bear-Pic" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Ursus_arctos_-_Norway.jpg/200px-Ursus_arctos_-_Norway.jpg"
+        <img id="Bear-Pic" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Ursus_arctos_-_Norway.jpg/200px-Ursus_arctos_-_Norway.jpg"
       alt="A Bear Standing Up Straight">
-           The image to my left was pulled from wikimedia.org and is a jpg file<br>
+      <div id="BearDescription">
+        <p>The image to my left was pulled from wikimedia.org and is a jpg file<br>
       In this paragraph I used CSS to make sure this writing appears to the right of the bear picture instead of immediatly below it.<br> 
       </p><div id="Strikethrough"><p>The method i used is "relative" which means it will be placed where it usually goes plus the top and left value.<br> 
       This can especially make the placement of this text different depending on what screen you are viewing this web site.<br> 
