--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
       }
       #Bear-Pic {
          float:left;
-         margin-right:8px;
-         margin-left:8px;
+         margin: 8px 8px 8px 8px;
          padding:4px;
       }
       #BearDescription {
         height: 350px;
         border: 3px dashed gray;
+        left:20px;
         background-color: rgb(220,220,220);
         padding-left: 2px;
       }
