--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       }
       #BearDescription {
         height: 350px;
-        border: 3px dashed gray;
+        border: 3px dashed black;
         left:20px;
         background-color: rgb(220,220,220);
         padding-left: 2px;
