--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
          padding:4px;
       }
       #BearDescription {
-        height: 350px;
-        border: 3px dashed black;
-        left:20px;
+        border: 3px dashed gray;
         background-color: rgb(220,220,220);
         padding-left: 2px;
       }
