--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       }
       #BearDescription {
         border: 3px dashed gray;
+        margin-bottom: 5px;
         background-color: rgb(220,220,220);
         padding-left: 2px;
       }
