--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       }
       #BearDescription {
         border: 3px dashed gray;
-        margin-bottom: 5px;
+        height:300px;
         background-color: rgb(220,220,220);
         padding-left: 2px;
       }
