--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       .Centered{text-align: center;}
       p {font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;}
       p {font-size: 24px}
+      p.Bold{
+        background-color: rgb(180,180,180);
+      }
       h1, h2, h3 {font-family: Georgia, Times, "Times New Roman", serif;}
       h1 {
         color:rgb(222, 173, 24);
@@ -116,7 +119,9 @@
       <div id="restOfBody">
       <h2 id="StayTuned">Stay Tuned for future updates</h2>
       <p id="backgroundColor"> In this paragraph I'm testing background colors using id reference and rgb</p>
-      <p class="RedColor"> In this paragraph I'm using class reference to make everything in red</p>
+      <p class="RedColor Centered"> In this paragraph I'm using class reference to make everything in red and centered using two different classes</p>
+      <h3 class="Bold"> In this h3 section I'm using the Bold Class </h3>
+      <p class="Bold"> in this p I'm also using bold but it has a background color because its a p.Bold class which I specified to have background color</p>
       <p>Please visit <a target="_blank" href="http://www.jw.org">Jw.org </a> Its the best web site ever (no really it literally <strong>IS</strong> the best web site ever)</p>
       <p>Here are the reasons why</p>
       <ul> 
