--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
       <p class="RedColor Centered"> In this paragraph I'm using class reference to make everything in red and centered using two different classes</p>
       <h3 class="Bold"> In this h3 section I'm using the Bold Class </h3>
       <p class="Bold"> in this p I'm also using bold but it has a background color because its a p.Bold class which I specified to have background color</p>
+      <p style="Background-color:orange; color:Blue;">In this paragraph I'm using inline Style to change the background and color, writing the code directly down on the p of this body instead of up on the head</p>
       <p>Please visit <a target="_blank" href="http://www.jw.org">Jw.org </a> Its the best web site ever (no really it literally <strong>IS</strong> the best web site ever)</p>
       <p>Here are the reasons why</p>
       <ul> 
